# SmokeEmIfYouGotEm

./: .gitattributes  .gitignore  CHANGELOG.md  CREDITS.md  LICENSE  LICENSE-CONTENT.md  NOTICE.md  README.md  TODO.md
physics/: README.md  pyproject.toml
physics/config/: custom_cpp_validation_gate.json  feature_forcing_defaults.json  geospatial_format_contract.json  reach_local_grid_contract.json  river_validation_annotations.example.geojson  runtime_baseline.json  runtime_budgets.json
physics/cpp/: CMakeLists.txt
physics/cpp/build-ue/: CMakeCache.txt  Makefile  cmake_install.cmake
physics/cpp/src/: chrono_bridge_fixtures.cpp  chrono_coupling.cpp  json.cpp  numpy_io.cpp  scenario.cpp  solver.cpp  solver_constants.hpp  solver_constriction_01.cpp  solver_constriction_02.cpp  solver_constriction_03.cpp  solver_constriction_04.cpp  solver_constriction_05.cpp  solver_constriction_06.cpp  solver_constriction_07.cpp  solver_constriction_08.cpp  solver_constriction_09.cpp  solver_constriction_10.cpp  solver_constriction_11.cpp  solver_diagnostics.cpp  solver_internal.hpp  solver_numerics.cpp  solver_output.cpp  solver_runtime.cpp
physics/cpp/tests/: chrono_bridge_fixtures.json  jolt_smoke_harness_manifest.json  raftsim_water_tests.cpp
physics/cpp/tools/: chrono_bridge_fixture_catalog.cpp  chrono_smoke_test.cpp  jolt_smoke_harness.cpp  raftsim_water_solver.cpp
physics/data/calibration/: flexible_raft_d1_compliant_tube_fixture.json  flexible_raft_d2_seat_load_fixture.json  flexible_raft_d3_overwash_fixture.json  flexible_raft_d4_rock_contact_fixture.json  flexible_raft_d5_telemetry_replay_fixture.json  flexible_raft_d6_behavioral_suite.json  flexible_raft_d6_chaos_measured_results_merge_report.json  flexible_raft_d6_chaos_measured_results_sidecar_template.json  flexible_raft_d6_comparison_report.json  flexible_raft_d6_compliant_measured_results_merge_report.json  flexible_raft_d6_compliant_measured_results_sidecar_template.json  flexible_raft_d6_execution_packet.json  flexible_raft_d6_fixture_input_package.json  flexible_raft_d6_measured_results_template.json  flexible_raft_d6_measurement_manifest.json  milestone18_boulder_garden_finite_volume_geoclaw_profile.json  milestone18_column_geoclaw_profiles.json  (+25 more)
physics/docs/: backend-evaluation.md  modeling-assumptions.md
physics/examples/: generate_south_fork_photoreal_environment.py
physics/schemas/: analytic_fixture_manifest.schema.json  feature_forcing.schema.json  geospatial_format_contract.schema.json  named_rapid_source_catalog.schema.json  parameters.schema.json  reach_local_grid.schema.json  replay.schema.json  river_validation_annotation.schema.json  scenario2_5d.schema.json  shared_schemas_manifest.json  source_manifest.schema.json  telemetry_forces.schema.json
physics/tests/: _capture_evidence.py  photoreal_test_support.py  test_analytic_fixtures.py  test_analytic_validation.py  test_backends.py  test_canopy_review_mining.py  test_cascading.py  test_chilko_lava_canyon_c3_window.py  test_chilko_lava_canyon_cooked_flow_fields.py  test_chilko_production_corridor.py  test_chilko_source_attachment.py  test_colorado_hance_c3_window.py  test_colorado_hance_cooked_flow_fields.py  test_colorado_production_corridor.py  test_cooked_flow_fields.py  test_cpp_solver_source_layout.py  test_cpp_water_solver.py  test_dual_solver.py  test_editor_source_layout.py  test_examples_2d.py  test_feature_forcing.py  test_feature_validation.py  test_flexible_raft_d1.py  test_flexible_raft_d2.py  test_flexible_raft_d3.py  test_flexible_raft_d4.py  test_flexible_raft_d5.py  test_flexible_raft_d6.py  test_flexible_raft_d6_execution_packet.py  test_frozen_schemas.py  test_futaleufu_cypress_retention.py  test_futaleufu_terminator_c3_window.py  test_futaleufu_terminator_cooked_flow_fields.py  test_geoclaw_reference.py  test_geospatial_preview.py  test_international_production_corridor.py  test_math3d.py  test_meat_grinder_c3_window.py  test_milestone16.py  test_milestone18.py  (+105 more)
(+6942 files in other folders)
